hasqd/tests/coptest/system/pos/008.sts
#!/bin/sh
$1/zdb erasedisk "create _wrd wrd Word 1 [abc] 1 0" "create _md5 md5 MD5 1 [abc] 1 0"
$1/hasqd -cq s=008.inp dprn=1 dsvt=1
$1/zdb erasedisk

